# awesomeindex

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  awesome-re-backup.json  awesomeindex-parse  awesomeindex-reindex  awesomeindex-seed  cli.py  fly.toml  pyproject.toml  start.sh
app/: config.py  database.py  main.py
app/internal/: github.py  parser.py  search.py  sync.py
app/models/: __init__.py  project.py  repository.py
app/routers/: projects.py  search.py
app/static/: styles.css
app/templates/: _project_item.html  base.html  browse_more.html  browse_results.html  index.html  results.html  results_more.html  search_more.html  search_results.html
scripts/: enrich_metadata.py  import_repositories.py  reindex_projects.py  seed_repositories.py
